--- a/app/src/assets/scss/routes.scss
+++ b/app/src/assets/scss/routes.scss
@@ -8,18 +8,18 @@
     border-radius: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
-    background: linear-gradient(#666, #111);
+    background: linear-gradient(#F5FCFF, #EBFAFF);
     box-shadow: -10px 10px 15px 5px #444;
 
   label {
-    font-family: 'Montserrat', sans-serif;
+    font-family: $mont-font;
     font-size: 20px;
-    color: #CCC;
+    color: #111;
   }
 
   input {
     margin-left: 10px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $mont-font;
     font-size: 20px;
     color: #111;
   }
@@ -28,8 +28,8 @@
     padding-top: 20px;
 
     h1 {
-      font-family: 'Montserrat', sans-serif;
-      color: #CCC;
+      font-family: $mont-font;
+      color: #111;
       margin-top: 20px;
       text-align: center;
     }
@@ -59,8 +59,8 @@
     // background: linear-gradient(#666, #111);
 
     .result-artist-name {
-      font-family: 'Montserrat', sans-serif;
-      color: #CCC;
+      font-family: $mont-font;
+      color: #111;
       margin-top: 20px;
       font-size: 40px;
       text-align: center;
@@ -76,8 +76,17 @@
     .result-artist-tags {
       width: 300px;
       height: 350px;
-      border: 1px solid #FFF;
+      //border: 1px solid #111;
     }
+  }
+
+
+  .homepage-text-input {
+
+    ul {
+      list-style: none;
+    }
+    
   }
 
 }
